# lemonade-admin

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: admin.md  developer.md  operator.md
src/lemonade_admin/: __init__.py  app.py  backup.py  cli.py  server.py
src/lemonade_admin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_admin_app.py  test_admin_backups.py  test_admin_install.py  test_admin_install_signature.py  test_admin_wizard.py  test_backup.py  test_cli.py  test_cli_backup.py  test_cli_restore.py  test_packaging.py  test_restore.py
